1. Implemented handlers for update tips and multicreate 2. Added kafka producer for CUD 3. Added metrics
